Fixed layout issue with emailsent.js, all is good again

--- a/src/Components/Emailsent/emailSent.css
+++ b/src/Components/Emailsent/emailSent.css
@@ -75,7 +75,7 @@
 		font-size: x-small;
 		top: 32%;
 		width: 50%;
-		left: 31.5%;
+		left: 24.5%;
 		color: white;
 	}
 }
